# template-python-package

./: .gitignore  .gitlab-ci.yml  NOTICE  flake.nix  pyproject.toml
template/: __init__.py  __main__.py
