[project]
dynamic = ["version"]

name = "template"
description = "Template Python package"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
	{ name = "Author", email = "author@example.org" },
]

[project.urls]
"Source" = "https://gitlab.com/-/p/75750085"
"Bug Reports" = "https://gitlab.com/esoteric-templates/templates/template-python-package/-/issues"

# [project.scripts]
# template = "template.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "template.__version__" }

[tool.setuptools.package-data]
"template" = ["assets/**/*"]
